--- a/css/main.css
+++ b/css/main.css
@@ -3050,7 +3050,9 @@ a {
     background: #06a862; }
 
 .down {
-  padding: 100px 0; }
+  padding: 100px 0;
+  position: relative;
+  z-index: 10; }
   .down img {
     display: block;
     max-width: 100%;
@@ -3676,6 +3678,43 @@ a {
       display: inline-block;
       margin: 20px 0 0; }
 
+.loading {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: #212121;
+  z-index: 10000;
+  transition: all .3s ease-in-out; }
+  .loading .line ul {
+    border-color: #2f2f2f; }
+    .loading .line ul li {
+      background: transparent;
+      border-color: #2f2f2f; }
+
+.load {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 999; }
+  .load .avatar {
+    height: 200px;
+    width: 200px;
+    font-size: 70px; }
+  .load_bar {
+    height: 5px;
+    width: 250px;
+    background: #fff;
+    margin: 50px auto;
+    position: relative; }
+    .load_bar span {
+      display: block;
+      height: 100%;
+      width: 0;
+      background: #06a862; }
+
 @media (max-width: 991px) {
   .line ul li {
     width: 20%; }
@@ -3740,6 +3779,8 @@ a {
   .line ul li {
     width: 50%; }
     .line ul li:nth-child(n+3) {
-      display: none; } }
+      display: none; }
+  .header_top ul li {
+    padding: 15px 25px; } }
 
 /*# sourceMappingURL=main.css.map */
