--- a/css/main.css
+++ b/css/main.css
@@ -3510,6 +3510,7 @@ a {
 
 .allWorks {
   background: #f4f4f4;
+  display: none;
   padding: 0 15px; }
   .allWorks .slick-list {
     overflow: inherit; }
