--- a/css/main.css
+++ b/css/main.css
@@ -2943,7 +2943,7 @@ template {
   right: 15px;
   bottom: 0; }
   .line ul {
-    border-right: 1px solid #eee;
+    border-right: 1px solid #f5f5f5;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -2952,7 +2952,7 @@ template {
     .line ul li {
       height: 100%;
       width: 14.2857%;
-      border-left: 1px solid #eee;
+      border-left: 1px solid #f5f5f5;
       float: left; }
       .line ul li:nth-child(2n) {
         background: rgba(255, 255, 255, 0.1); }
@@ -3048,9 +3048,9 @@ a {
   .section_title:after {
     content: "";
     display: inline-block;
-    height: 5px;
-    width: 40px;
-    background: #06a862; }
+    height: 16px;
+    width: 16px;
+    background: url(../img/icon.png) no-repeat 50% 50%; }
 
 .down {
   padding: 100px 0;
@@ -3283,6 +3283,8 @@ a {
     transform: rotate(90deg);
     line-height: 1;
     opacity: .95; }
+    .banner .text span {
+      display: inline-block; }
     .banner .text_1 {
       left: 200px;
       top: 250px; }
@@ -3354,7 +3356,7 @@ a {
   background: #fff url(../img/bgAbout.jpg) no-repeat top left;
   background-size: cover;
   background-attachment: fixed;
-  box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 20px 50px 0px rgba(54, 67, 77, 0.2);
   position: relative; }
   .about_inner .cirle {
     content: "";
@@ -3453,6 +3455,7 @@ a {
     box-shadow: 0 0 40px rgba(54, 67, 77, 0.2);
     background-size: cover;
     background-position: top center;
+    transition: all 0.3s cubic-bezier(0, 0, 0.1, 1.48);
     position: relative; }
     .work .mockup span {
       display: block;
@@ -3493,6 +3496,10 @@ a {
     right: -50%;
     bottom: -100px;
     line-height: 1;
+    text-shadow: 0px 20px 30px rgba(0, 0, 0, 0.2);
+    -webkit-transform-origin: center left !important;
+    -ms-transform-origin: center left !important;
+    transform-origin: center left !important;
     text-transform: uppercase;
     font-size: 500px;
     position: absolute;
@@ -3502,7 +3509,10 @@ a {
 
 .works > div:nth-child(2n) .letter {
   right: inherit;
-  left: -50%; }
+  left: -50%;
+  -webkit-transform-origin: center right !important;
+  -ms-transform-origin: center right !important;
+  transform-origin: center right !important; }
 
 .works > div:nth-child(2n) .namWork {
   left: inherit;
@@ -3511,8 +3521,14 @@ a {
 .allWorks {
   background: #f4f4f4;
   padding: 0 15px; }
+  .allWorks .slick-arrow {
+    position: absolute;
+    top: 50%;
+    z-index: 999; }
   .allWorks .slick-list {
     overflow: inherit; }
+  .allWorks .slick-next {
+    right: 0; }
   .allWorks .work-item {
     background-size: cover;
     overflow: hidden; }
@@ -3816,5 +3832,10 @@ a {
     left: -30px; }
   .works > div:nth-child(2n) .namWork {
     right: -20px; } }
+
+@media (min-height: 900px) {
+  .wrap_text {
+    margin-top: 10%;
+    position: relative; } }
 
 /*# sourceMappingURL=main.css.map */
