--- a/css/main.css
+++ b/css/main.css
@@ -2836,78 +2836,196 @@ template {
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp; }
 
-/* Slider */
-.slick-slider {
+/**
+ * Owl Carousel v2.2.0
+ * Copyright 2013-2016 David Deutsch
+ * Licensed under MIT (https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE)
+ */
+/*
+ *  Owl Carousel - Core
+ */
+.owl-carousel {
+  display: none;
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
+  /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
+  z-index: 1; }
+
+.owl-carousel .owl-stage {
+  position: relative;
+  -ms-touch-action: pan-Y; }
+
+.owl-carousel .owl-stage:after {
+  content: ".";
   display: block;
-  box-sizing: border-box;
-  -webkit-touch-callout: none;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0; }
+
+.owl-carousel .owl-stage-outer {
+  position: relative;
+  overflow: hidden;
+  /* fix for flashing background */
+  -webkit-transform: translate3d(0px, 0px, 0px); }
+
+.owl-carousel .owl-item {
+  position: relative;
+  min-height: 1px;
+  float: left;
+  -webkit-backface-visibility: hidden;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none; }
+
+.owl-carousel .owl-item img {
+  display: block;
+  width: 100%;
+  -webkit-transform-style: preserve-3d; }
+
+.owl-carousel .owl-nav.disabled,
+.owl-carousel .owl-dots.disabled {
+  display: none; }
+
+.owl-carousel .owl-nav .owl-prev,
+.owl-carousel .owl-nav .owl-next,
+.owl-carousel .owl-dot {
+  cursor: pointer;
+  cursor: hand;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent; }
+  user-select: none; }
 
-.slick-list {
-  position: relative;
-  overflow: hidden;
-  display: block;
-  margin: 0;
-  padding: 0; }
-  .slick-list:focus {
-    outline: none; }
-  .slick-list.dragging {
-    cursor: pointer;
-    cursor: hand; }
-
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
-
-.slick-track {
-  position: relative;
-  left: 0;
-  top: 0;
+.owl-carousel.owl-loaded {
   display: block; }
-  .slick-track:before, .slick-track:after {
-    content: "";
-    display: table; }
-  .slick-track:after {
-    clear: both; }
-  .slick-loading .slick-track {
-    visibility: hidden; }
 
-.slick-slide {
-  float: left;
+.owl-carousel.owl-loading {
+  opacity: 0;
+  display: block; }
+
+.owl-carousel.owl-hidden {
+  opacity: 0; }
+
+.owl-carousel.owl-refresh .owl-item {
+  visibility: hidden; }
+
+.owl-carousel.owl-drag .owl-item {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.owl-carousel.owl-grab {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab; }
+
+.owl-carousel.owl-rtl {
+  direction: rtl; }
+
+.owl-carousel.owl-rtl .owl-item {
+  float: right; }
+
+/* No Js */
+.no-js .owl-carousel {
+  display: block; }
+
+/*
+ *  Owl Carousel - Animate Plugin
+ */
+.owl-carousel .animated {
+  -webkit-animation-duration: 1000ms;
+  animation-duration: 1000ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+.owl-carousel .owl-animated-in {
+  z-index: 0; }
+
+.owl-carousel .owl-animated-out {
+  z-index: 1; }
+
+.owl-carousel .fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut; }
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
+/*
+ * 	Owl Carousel - Auto Height Plugin
+ */
+.owl-height {
+  transition: height 500ms ease-in-out; }
+
+/*
+ * 	Owl Carousel - Lazy Load Plugin
+ */
+.owl-carousel .owl-item .owl-lazy {
+  opacity: 0;
+  transition: opacity 400ms ease; }
+
+.owl-carousel .owl-item img.owl-lazy {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d; }
+
+/*
+ * 	Owl Carousel - Video Plugin
+ */
+.owl-carousel .owl-video-wrapper {
+  position: relative;
   height: 100%;
-  min-height: 1px;
-  display: none; }
-  [dir="rtl"] .slick-slide {
-    float: right; }
-  .slick-slide img {
-    display: block; }
-  .slick-slide.slick-loading img {
-    display: none; }
-  .slick-slide.dragging img {
-    pointer-events: none; }
-  .slick-initialized .slick-slide {
-    display: block; }
-  .slick-loading .slick-slide {
-    visibility: hidden; }
-  .slick-vertical .slick-slide {
-    display: block;
-    height: auto;
-    border: 1px solid transparent; }
+  background: #000; }
 
-.slick-arrow.slick-hidden {
+.owl-carousel .owl-video-play-icon {
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  left: 50%;
+  top: 50%;
+  margin-left: -40px;
+  margin-top: -40px;
+  background: url("owl.video.play.png") no-repeat;
+  cursor: pointer;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  transition: -webkit-transform 100ms ease;
+  transition: transform 100ms ease;
+  transition: transform 100ms ease, -webkit-transform 100ms ease; }
+
+.owl-carousel .owl-video-play-icon:hover {
+  -webkit-transform: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3); }
+
+.owl-carousel .owl-video-playing .owl-video-tn,
+.owl-carousel .owl-video-playing .owl-video-play-icon {
   display: none; }
+
+.owl-carousel .owl-video-tn {
+  opacity: 0;
+  height: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transition: opacity 400ms ease; }
+
+.owl-carousel .owl-video-frame {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  width: 100%; }
 
 .container {
   width: 100%;
@@ -2943,7 +3061,7 @@ template {
   right: 15px;
   bottom: 0; }
   .line ul {
-    border-right: 1px solid #f5f5f5;
+    border-right: 1px solid #e8e8e8;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -2952,7 +3070,7 @@ template {
     .line ul li {
       height: 100%;
       width: 14.2857%;
-      border-left: 1px solid #f5f5f5;
+      border-left: 1px solid #e8e8e8;
       float: left; }
       .line ul li:nth-child(2n) {
         background: rgba(255, 255, 255, 0.1); }
@@ -3043,7 +3161,7 @@ a {
     display: block;
     text-transform: uppercase;
     margin: 0 0 30px;
-    font-weight: 300;
+    font-weight: 900;
     font-size: 35px; }
   .section_title:after {
     content: "";
@@ -3479,8 +3597,8 @@ a {
       opacity: 1; }
   .work .namWork {
     font-weight: 700;
-    text-transform: uppercase;
-    font-size: 35px;
+    text-transform: lowercase;
+    font-size: 30px;
     position: absolute;
     left: -150px;
     top: 0;
@@ -3521,14 +3639,12 @@ a {
 .allWorks {
   background: #f4f4f4;
   padding: 0 15px; }
-  .allWorks .slick-arrow {
-    position: absolute;
-    top: 50%;
-    z-index: 999; }
   .allWorks .slick-list {
     overflow: inherit; }
-  .allWorks .slick-next {
-    right: 0; }
+  .allWorks .owl-stage-outer {
+    overflow: inherit; }
+  .allWorks .owl-stage {
+    transition: all 1s ease-in-out; }
   .allWorks .work-item {
     background-size: cover;
     overflow: hidden; }
@@ -3567,25 +3683,25 @@ a {
       -ms-transform: translateY(-100px);
       transform: translateY(-100px);
       transition: all .3s ease-in-out; }
-    .allWorks .work-item.slick-active .color {
-      min-height: 100%; }
-    .allWorks .work-item.slick-active span {
-      opacity: 1;
-      bottom: 100px; }
-    .allWorks .work-item.slick-active strong {
-      -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-      transform: translateY(0px); }
-    .allWorks .work-item.slick-active:hover strong {
-      text-shadow: 0px 20px 30px rgba(0, 0, 0, 0.3);
-      -webkit-transform: translateY(-30px);
-      -ms-transform: translateY(-30px);
-      transform: translateY(-30px); }
-    .allWorks .work-item.slick-active:hover span {
-      text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-      -webkit-transform: translateY(-30px);
-      -ms-transform: translateY(-30px);
-      transform: translateY(-30px); }
+  .allWorks .owl-item.active .color {
+    min-height: 100%; }
+  .allWorks .owl-item.active span {
+    opacity: 1;
+    bottom: 100px; }
+  .allWorks .owl-item.active strong {
+    -webkit-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px); }
+  .allWorks .owl-item.active:hover strong {
+    text-shadow: 0px 20px 30px rgba(0, 0, 0, 0.3);
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px); }
+  .allWorks .owl-item.active:hover span {
+    text-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px); }
 
 .contact_top {
   height: 100px;
