--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,7 +2,8 @@
 @import fontello
 @import reset
 @import animate
-@import slick
+// @import slick
+@import owl
 @import var
 @import header
 @import banner
