--- a/index.jade
+++ b/index.jade
@@ -105,7 +105,7 @@ html(lang='en')
                                         span 22 - 12 - 1990
 
                                         .hidden-xs
-                                            a(href="#", title="title").btn 
+                                            a(href="/CV.pdf", title="Download my CV" target="_blank").btn 
                                                 span My CV 
                                         
                                         
@@ -157,43 +157,82 @@ html(lang='en')
                     .section.works_recent#works
                         .container 
                             .section_title.text-center
-                                h3 Recent works<br>
-
+                                h3(data-text="Recent works")
+                                    span Recent works<br>
 
                             .works 
                                 .work
-                                    a(href="http://32dentalstudio.com", target="_blank")
-                                        .mockup(style="background-image:url(img/works/32.jpg")
+                                    a(href="https://daoduytan.github.io/london", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/london.jpg)")
+                                            span(style="background: rgba(31, 86, 151, 0.2)")
+                                        h3.namWork.wow.slideInLeft Institute of english
+                                        span.letter(style="color: rgba(31, 86, 151, 0.9)") I
+                                        .text-center 
+                                            span Design + html/css
+
+                                .work
+                                    a(href="https://daoduytan.github.io/acocean", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/acocean.jpg)")
+                                            span(style="background: rgba(239, 104, 89, 0.2)")
+                                        h3.namWork.wow.slideInLeft acocean
+                                        span.letter(style="color: rgba(239, 104, 89, 0.9)") A
+                                        .text-center 
+                                            span Design + html/css
+
+                                .work
+                                    a(href="https://daoduytan.github.io/kindness", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/kindness.jpg)")
+                                            span(style="background: rgba(216, 67, 64, 0.2)")
+                                        h3.namWork.wow.slideInLeft Kindness
+                                        span.letter(style="color: rgba(216, 67, 64, 0.9)") K
+                                        .text-center 
+                                            span Design + html/css
+
+                                .work
+                                    a(href="https://daoduytan.github.io/upbeat-talent", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/upbeat-talent.jpg)")
+                                            span(style="background: rgba(255, 190, 33, 0.2)")
+                                        h3.namWork.wow.slideInLeft Upbeat talent
+                                        span.letter(style="color: rgba(255, 190, 33, 0.9)") T
+                                        .text-center 
+                                            span Design + html/css
+
+                                .work
+                                    a(href="http://haiduc.com.vn/bearings/en.html", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/haiduc.jpg)")
+                                            span(style="background: rgba(12, 28, 36, 0.2)")
+                                        h3.namWork.wow.slideInLeft Hai Duc Company
+                                        span.letter(style="color: rgba(12, 28, 36, 0.9)") H
+                                        .text-center 
+                                            span Code html/css
+
+                                .work
+                                    a(href="http://32dentalstudio.com", target="_blank", title="Go to site")
+                                        .mockup(style="background-image:url(img/works/32.jpg)")
                                             span(style="background: rgba(104, 14, 52, 0.2)")
                                         h3.namWork.wow.slideInLeft 32dentalstudio
                                         span.letter(style="color: rgba(104, 14, 52, 0.9)") 3
+                                        .text-center 
+                                            span Code html/css
 
                                 .work
                                     a(href="https://boligsurf.dk", target="_blank")
-                                        .mockup(style="background-image:url(img/works/bo.jpg")
+                                        .mockup(style="background-image:url(img/works/bo.jpg)")
                                             span(style="background: rgba(32, 141, 99, 0.2)")
                                         h3.namWork.wow.slideInLeft BOLIGSURF
                                         span.letter(style="color: rgba(32, 141, 99, 0.9)") b
-
-                                .work
-                                    a(href="http://geo.sa", target="_blank")
-                                        .mockup(style="background-image:url(img/works/geo.jpg")
-                                            span(style="background: rgba(245, 86, 31, 0.2)")
-                                        h3.namWork.wow.slideInLeft geo.sa
-                                        span.letter(style="color: rgba(245, 86, 31, 0.9)") g
+                                        .text-center 
+                                            span Code html/css
 
                                 .work
                                     a(href="https://huydong.com", target="_blank")
-                                        .mockup(style="background-image:url(img/works/huydong.jpg")
+                                        .mockup(style="background-image:url(img/works/huydong.jpg)")
                                             span(style="background: rgba(39, 146, 111, 0.2)")
                                         h3.namWork.wow.slideInLeft huydong.com
                                         span.letter(style="color: rgba(39, 146, 111, 0.9)") h
-                                .work
-                                    a(href="http://thelifepill.org", target="_blank")
-                                        .mockup(style="background-image:url(img/works/life.jpg")
-                                            span(style="background: rgba(219, 10, 22, 0.2)")
-                                        h3.namWork.wow.slideInLeft life for life
-                                        span.letter(style="color: rgba(219, 10, 22, 0.9)") l
+                                        .text-center 
+                                            span Code html/css
+
 
 
                         .text-center(style="margin-bottom: 200px")
@@ -202,81 +241,79 @@ html(lang='en')
                         
 
                         .allWorks#allWorks
-                            .allWorks_slider
-                                .work-item(style="background-image:url(img/works/lnt.jpg")
+                            .allWorks_slider.owl-carousel
+                                .work-item(style="background-image:url(img/works/lnt.jpg)")
                                     a(href="http://lntpartners.com", target="_blank")
                                         span lntpartners.com
                                         .color(style="background: rgba(174, 35, 40, .2)")
                                         strong(style="color: rgba(174, 35, 40, .9)") l
-                                .work-item(style="background-image:url(img/works/tpauk.jpg")
+                                .work-item(style="background-image:url(img/works/tpauk.jpg)")
                                     a(href="http://www.tpauk.com", target="_blank")
                                         span tpauk.com
                                         .color(style="background: rgba(0, 103, 102, .2)")
                                         strong(style="color: rgba(0, 103, 102, .9)") t
-                                .work-item(style="background-image:url(img/works/sanskriti.jpg")
+                                .work-item(style="background-image:url(img/works/sanskriti.jpg)")
                                     a(href="http://sanskritiarts.ca/", target="_blank")
                                         span sanskritiarts.ca
                                         .color(style="background: rgba(235, 3, 41, .2)")
                                         strong(style="color: rgba(235, 3, 41, .9)") s
 
-                                .work-item(style="background-image:url(img/works/bo.jpg")
+                                .work-item(style="background-image:url(img/works/bo.jpg)")
                                     a(href="https://boligsurf.dk", target="_blank")
                                         span BOLIGSURF
                                         .color(style="background: rgba(32, 141, 99, .2)")
                                         strong(style="color: rgba(32, 141, 99, .9)") b
 
-                                .work-item(style="background-image:url(img/works/life.jpg")
+                                .work-item(style="background-image:url(img/works/life.jpg)")
                                     a(href="http://thelifepill.org", target="_blank")
                                         span lifepilllaboratories
                                         .color(style="background: rgba(219, 10, 22, .2)")
                                         strong(style="color: rgba(219, 10, 22, .9)") l
 
-                                .work-item(style="background-image:url(img/works/32.jpg")
+                                .work-item(style="background-image:url(img/works/32.jpg)")
                                     a(href="http://32dentalstudio.com", target="_blank")
                                         span 32dentalstudio
                                         .color(style="background: rgba(104, 14, 52, .2)")
                                         strong(style="color: rgba(104, 14, 52, .9)") 3
                                 
-                                .work-item(style="background-image:url(img/works/nafas.jpg")
+                                .work-item(style="background-image:url(img/works/nafas.jpg)")
                                     a(href="http://nafas.org.uk", target="_blank")
                                         span nafas.org.uk
                                         .color(style="background: rgba(194, 211, 108, .2)")
                                         strong(style="color: rgba(194, 211, 108, .9)") n
 
-                                .work-item(style="background-image:url(img/works/cre8uk-s.jpg")
+                                .work-item(style="background-image:url(img/works/cre8uk-s.jpg)")
                                     a(href="http://cre8uk.co", target="_blank")
                                         span cre8uk.co
                                         .color(style="background: rgba(20, 73, 144, .2)")
                                         strong(style="color: rgba(20, 73, 144, .9)") c
-                                .work-item(style="background-image:url(img/works/huydong.jpg")
+                                .work-item(style="background-image:url(img/works/huydong.jpg)")
                                     a(href="https://huydong.com", target="_blank")
                                         span huydong.com
                                         .color(style="background: rgba(139, 146, 111, .2)")
                                         strong(style="color: rgba(139, 146, 111, .9)") h
 
-                                .work-item(style="background-image:url(img/works/geo.jpg")
+                                .work-item(style="background-image:url(img/works/geo.jpg)")
                                     a(href="http://geo.sa", target="_blank")
                                         span geo.sa
                                         .color(style="background: rgba(245, 86, 31, .2)")
                                         strong(style="color: rgba(245, 86, 31, .9)") g
                                 
 
-                                .work-item(style="background-image:url(img/works/wood.jpg")
+                                .work-item(style="background-image:url(img/works/wood.jpg)")
                                     a(href="http://www.biertonandwoods.co.uk/", target="_blank")
                                         span biertonandwoods.co.uk
                                         .color(style="background: rgba(80, 82, 87, .2)")
                                         strong(style="color: rgba(80, 82, 87, .9)") b
 
-                                .work-item(style="background-image:url(img/works/guitar.jpg")
+                                .work-item(style="background-image:url(img/works/guitar.jpg)")
                                     a(href="http://www.totallyguitars.com", target="_blank")
                                         span totallyguitars.com
                                         .color(style="background: rgba(111, 48, 74, .2)")
                                         strong(style="color: rgba(111, 48, 74, .9)") t
 
-                                
-                                
-
-                                .work-item(style="background-image:url(img/works/brain.jpg")
+    
+                                .work-item(style="background-image:url(img/works/brain.jpg)")
                                     a(href="http://www.brainbullet.com", target="_blank")
                                         span brainbullet
                                         .color(style="background: rgba(255, 174, 0, .2)")
@@ -332,5 +369,6 @@ html(lang='en')
     script(src="js/wow.min.js")
     script(src="js/TweenMax.min.js")
     script(src="js/ScrollToPlugin.min.js")
-    script(src="js/slick.min.js")
+    //- script(src="js/slick.min.js")
+    script(src="js/owl.carousel.min.js")
     script(src="js/main.js")
