--- a/index.jade
+++ b/index.jade
@@ -94,7 +94,7 @@ html(lang='en')
                     
                     .section.about#about
                         .container 
-                            .about_inner.wow.slideInUp
+                            .about_inner
                                 .cirle
                                 .row 
                                     .col.col-6.about_left
