--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,8 @@
 @import bourbon/bourbon
+@import font
 @import fontello
 @import reset
 @import animate
-// @import slick
 @import owl
 @import var
 @import header
