--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,6 @@ html(lang='en')
         <meta name="viewport" content="width=device-width, initial-scale=1">
         title Dao Duy Tan
         link(href="css/main.css", rel="stylesheet")
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-
         script(src="js/modernizr-2.8.3.min.js")
     
     body
@@ -366,9 +364,7 @@ html(lang='en')
     
     //- load js
     <script src="js/jquery.min.js"></script>
-    script(src="js/wow.min.js")
     script(src="js/TweenMax.min.js")
     script(src="js/ScrollToPlugin.min.js")
-    //- script(src="js/slick.min.js")
-    script(src="js/owl.carousel.min.js")
+    script(src="js/libs.js")
     script(src="js/main.js")
